4.25.1
	- support Google Sheets interactive view URLs for XLSX files (but not tab identifiers)
	- add --encoding option to all command-line scripts (tested with CSV)
	- upgrade to xlrd3 version 1.1.0

2022-02-28 Release 4.25
	- remove discontinued "encoding" keyword for json.load (Python 3.9)
	- rename the hxl.io module to hxl.input (to avoid problems in Python on Windows)

2021-04-23 Release 4.24
	- fix bug that prevented tagger from adding tags if there was a blank row before the text headers

2021-02-08 Release 4.23
	- handle encoding errors in CSV more gracefully (replace with "?")
	- fix bug in JSON recipes (correct "key" to "tags" in the sort filter)
	- fix bug in the sort filter when there is no key and untagged columns on the right side of the dataset

2021-01-15 Release 4.22
	- consolidate recent bugfix releases
	- use same input code for XLS (old Excel) and XLSX (new Excel) via xlrd3 library
	- more-informative exception for an out-of-range Excel sheet index

2021-01-13 Release 4.21.3
	- Bug-fix release: switch to xlrd3 library, since xlrd has dropped support for XLSX files
	- be more careful about detecting non-XLSX zip files
	- be more efficient with memory usage for Excel files
	- for web-security reasons, unless allow_local is True, block fetching datasets from localhost, *.localdomain, or any dotted quad

2020-12-08 Release 4.21.2
	- Bug-fix release: corrected rare Unicode bug in lookahead buffer for CSV files

2020-08-18 Release 4.21.1
	- Bug-fix release: corrected rare bug in handling HXL Proxy saved recipes as a source

2020-07-22 Release 4.21
	- BACKWARDS-INCOMPATIBLE: rename "whitelist" to "includes" in
	  hxl.model.Dataset.with_columns() and JSON format for loading a
	  ColumnFilter
	- BACKWARDS-INCOMPATIBLE: rename "blacklist" to "excludes" in
	  hxl.model.Dataset.without_columns() and JSON format for loading a
	  ColumnFilter
	- added a new ExpandListsFilter and hxlexpand command-line script
	- added --skip-untagged option to hxlcut script