@@ -1,4 +1,5 @@
 4.25.1
+	- add support for reporting merged cells (XLS and XLSX only for now)
 	- support Google Sheets interactive view URLs for XLSX files (but not tab identifiers)
 	- add --encoding option to all command-line scripts (tested with CSV)
 	- upgrade to xlrd3 version 1.1.0
